# cuTAGI

./: .buildinfo  .gitignore  CMakeLists.txt  dev_guide.html  download_imagenet.html  genindex.html  github_dev_guide.html  index.html  multi_gpu.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  syn_dataset_hqts1_lstm_unstandardized_model1_10episodes.csv  syn_dataset_hqts4_lstm_datetime.csv  wandb_setup.html
.doctrees/: dev_guide.doctree  download_imagenet.doctree  environment.pickle  github_dev_guide.doctree  index.doctree  multi_gpu.doctree  wandb_setup.doctree
_modules/: index.html
api/: dev_guides.html  examples.html  installations.html  nn.html  nn_layers.html  pytagi_api.html  theory.html
data/: syn_dataset_hqts4_lstm_datetime.csv  syn_dataset_hqts4_lstm_unstandardized_model1_200episodes.csv  syn_dataset_hqts4_lstm_unstandardized_model1_200episodes_v1.csv  syn_dataset_hqts4_lstm_unstandardized_model1_200episodes_v2.csv
docs/: conf.py  index.rst  requirements_docs.txt
examples/: AGVI_toy.ipynb  AGVI_toyproblem.py  CASC_LGA007PIAP_E010_202407_config.ipynb  CASC_LGA007PIAP_E010_202407_config10.ipynb  CASC_LGA007PIAP_E010_202407_config2.ipynb  CASC_LGA007PIAP_E010_202407_config3.ipynb  CASC_LGA007PIAP_E010_202407_config4.ipynb  CASC_LGA007PIAP_E010_202407_config5.ipynb  CASC_LGA007PIAP_E010_202407_config6.ipynb  CASC_LGA007PIAP_E010_202407_config7.ipynb  CASC_LGA007PIAP_E010_202407_config8.ipynb  CASC_LGA007PIAP_E010_202407_config9.ipynb  CASC_debug.ipynb  CASC_test.ipynb  DEBUG_CASC_LGA007PIAP_E010_202407_config.ipynb  HQ_hybrid.ipynb  HQ_hybrid.py  HQ_hybrid_early_stop.py  HQ_hybrid_v1.py  PG_CASC_LGA007PIAP_E010_202407_config.ipynb  config_ts01_mimic_real.ipynb  config_ts02_axisY.ipynb  counting_letters.py  data_convert_mat_to_CSV.ipynb  data_loader.py  demo_pytagi.ipynb  electricity_2014_03_31.py  electricity_2014_03_31_figure.py  hq_test.py  (+41 more)
(+303 files in other folders)
