[build-system]
requires = [
    "setuptools>=75.5.0",
    "wheel>=0.44.0",
    "cmake>=3.31.1",
    "numpy>=2.1.3",
    "ninja>=1.11.1.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytagi"
version = "0.1.0"
description = "PyTorch-compatible implementation of the cuTAGI algorithm."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]