[metadata]
name = pytagi
version = 0.1.0
description = Tractable Approximate Gaussian Inference
long_description = file: README.md
long_description_content_type = text/markdown
author = Luong-Ha Nguyen and James-A. Goulet
author_email = luongha.nguyen@gmail.com, james.goulet@polymtl.ca
url = https://github.com/lhnguyen102/cuTAGI
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: C++
    Programming Language :: CUDA
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

keywords =
    Bayesian
    Neural Networks
    Machine Learning
    Tractability
    C++11
    CUDA

project_urls =
    Homepage = https://github.com/lhnguyen102/cuTAGI

[options]
python_requires = >=3.10
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    test
    test.*
    examples
    examples.*
    save_param
    save_param.*
    saved_results
    saved_results.*
    data
    data.*
    __pycache__
    __pycache__.*

[options.package_data]
pytagi = version.txt
pytagi_data =
    LICENSE
    README.md
    pyproject.toml
    setup.py
    setup.cfg
    *.cmake